--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
                 <div class="col-md-6 col-12 mt-5">
                     <div class="row">
                         <div class="col-md-4 col-12">
-                            <a href="../index.html">
+                            <a href="index.html">
                                 <p class="pages">QUIENES SOMOS</p>
                             </a>
-                            <a href="./productos.html">
+                            <a href="views/productos.html">
                                 <p class="pages">PRODUCTOS</p>
                             </a>
-                            <a href="./contacto.html">
+                            <a href="views/contacto.html">
                                 <p class="pages">CONTACTO</p>
                             </a>
                         </div>
